fix: adjust layout for Analytics header on small screens

--- a/src/components/Analytics/Analytics.less
+++ b/src/components/Analytics/Analytics.less
@@ -10,6 +10,13 @@
     align-items: center;
     justify-content: space-between;
 
+    @media screen and (max-width: 548px) {
+      flex-direction: column-reverse;
+      align-items: center;
+      text-align: center;
+      gap: 16px;
+    }
+
     &-content {
       display: flex;
       flex-direction: column;
